src/test/compile-fail/pred.pat
.*Error: Unsatisfied precondition constraint: lt(a, c).*
